# forge-tlp

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  INSTALL.md  Makefile  README.md  VERIFY.md  defaults.yaml  module.yaml
.claude-plugin/: plugin.json
examples/: tlp.example.yaml
hooks/: SessionStart.md  SessionStart.sh  hooks.json  pre-tool-use.sh  skill-load.sh  tlp-guard-wrapper.sh
lib/: load.sh
skills/SafeRead/: SKILL.md  SKILL.yaml
skills/SecretScan/: SKILL.md  SKILL.yaml
skills/TLP/: SKILL.md  SKILL.yaml
skills/tlp/: SKILL.md
src/: frontmatter.rs  lib.rs  redact.rs  tlp.rs  vault.rs
src/frontmatter/: mod.rs  tests.rs
src/redact/: mod.rs  tests.rs
src/tlp/: mod.rs  tests.rs
src/vault/: mod.rs  tests.rs
tests/: blind_metadata.rs  safe_read.rs  safe_write.rs  tlp_guard.rs
tests/fixtures/configs/: amber_journals.tlp  amber_md.tlp  clear_readme.tlp  first_match_wins.tlp  green_md.tlp  green_topics.tlp  red_contacts.tlp  red_pdf.tlp
tests/fixtures/content/: complex_markdown.md  frontmatter_amber.md  frontmatter_green.md  frontmatter_invalid.md  frontmatter_red.md  full_pipeline.md  inline_redaction.md  inline_unterminated.md  multiple_redactions.md  multiple_secrets.md  plain.md  short_sk_false_positive.md  source_code.md  unterminated_red.md  with_api_key.md  with_gitlab_token.md  with_redaction.md  with_stripe_key.md
