[package]
name = "context-tlp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tlp-guard"
path = "src/bin/tlp-guard.rs"

[[bin]]
name = "safe-read"
path = "src/bin/safe-read.rs"

[[bin]]
name = "blind-metadata"
path = "src/bin/blind-metadata.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
