[package]
name = "context-tlp"
version = "0.2.0"
edition = "2021"
description = "Traffic Light Protocol (TLP) file access control plugin for Claude Code"
license = "MIT"
repository = "https://github.com/N4M3Z/context-tlp"

[lib]
name = "context_tlp"
path = "src/lib.rs"

[[bin]]
name = "tlp-guard"
path = "src/bin/tlp-guard.rs"

[[bin]]
name = "safe-read"
path = "src/bin/safe-read.rs"

[[bin]]
name = "blind-metadata"
path = "src/bin/blind-metadata.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
strip = true
lto = true
