[package]
name = "context-tlp"
version = "0.2.0"
edition = "2021"
description = "Traffic Light Protocol (TLP) file access control plugin for Claude Code"
license = "EUPL-1.2"
repository = "https://github.com/N4M3Z/context-tlp"

[lib]
name = "context_tlp"
path = "src/lib.rs"

[[bin]]
name = "tlp-guard"
path = "src/bin/tlp-guard.rs"

[[bin]]
name = "safe-read"
path = "src/bin/safe-read.rs"

[[bin]]
name = "blind-metadata"
path = "src/bin/blind-metadata.rs"

[[bin]]
name = "safe-write"
path = "src/bin/safe-write.rs"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
similar = "2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
strip = true
lto = true
